# marp2pptx

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
src/marp2pptx/: __init__.py  __main__.py  config.py  converter.py  default.yaml  fonts.py
tests/: test_config.py  test_convert.py  test_fonts.py  test_parser.py
tests/fixtures/: simple.md
